//package prog2.model;
//
//public class VistaEstacioTren {
//    private EstacioTren estacioTren;
//}
//
